--- a/functionary/ui/templates/core/environment_detail.html
+++ b/functionary/ui/templates/core/environment_detail.html
@@ -39,7 +39,7 @@
                 <ul id="packages">
                     {% for package in packages %}
                         <li class="block ml-4">
-                            <a href="{% url 'ui:package-detail' package.id %}">{{ package.name }}</a>
+                            <a href="{% url 'ui:package-detail' package.id %}">{{ package }}</a>
                             <br/>
                             {{ package.summary }}
                         </li>
