--- a/functionary/ui/templates/core/package_list.html
+++ b/functionary/ui/templates/core/package_list.html
@@ -13,7 +13,7 @@
                             </div>
                             <div class="media-content">
                                 <a href="{% url 'ui:package-detail' package.id %}">
-                                    <p class="title is-4">{{ package }}</p>
+                                    <p class="title is-4">{{ package.render_name }}</p>
                                 </a>
                                 {% if package.summary %}
                                     <p class="subtitle is-6">{{ package.summary }}</p>
