--- a/functionary/ui/templates/core/team_list.html
+++ b/functionary/ui/templates/core/team_list.html
@@ -1,5 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
-    {% include "partials/teams/list.html" %}
+    <div class="table-container">
+        <table class="table is-striped is-hoverable is-fullwidth">
+            <thead>
+                <tr>
+                    <th>Team</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for team in page_obj %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'ui:team-detail' team.id %}">{{ team.name }}</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
     {% include "partials/pagination_navbar.html" with page_obj=page_obj paginator=paginator %}
 {% endblock content %}
