--- a/functionary/ui/templates/builder/build_list.html
+++ b/functionary/ui/templates/builder/build_list.html
@@ -1,5 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
-    {% include "partials/builds/list.html" %}
+    <div class="table-container">
+        <table class="table is-striped is-hoverable is-fullwidth">
+            <thead>
+                <tr>
+                    <th>Package Name</th>
+                    <th>Status</th>
+                    <th>Created at</th>
+                    <th>Creator</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for build in page_obj %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'ui:build-detail' build.id %}">{{ build.package }}</a>
+                        </td>
+                        <td>{{ build.status }}</td>
+                        <td>{{ build.created_at }}</td>
+                        <td>{{ build.creator.username }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
     {% include "partials/pagination_navbar.html" with page_obj=page_obj paginator=paginator %}
 {% endblock content %}
