--- a/functionary/ui/templates/core/scheduling_list.html
+++ b/functionary/ui/templates/core/scheduling_list.html
@@ -13,6 +13,47 @@
             </a>
         </div>
     </div>
-    {% include "partials/schedules/list.html" %}
+    <div class="table-container">
+        <table class="table is-striped is-hoverable is-fullwidth">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Function</th>
+                    <th>Last Run</th>
+                    <th>Schedule</th>
+                    <th>Status</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for schedule in page_obj %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'ui:detail-schedule' schedule.id %}">{{ schedule.name }}</a>
+                        </td>
+                        <td>
+                            <a href="{% url 'ui:function-detail' schedule.function.id %}">{{ schedule.function.name }}</a>
+                        </td>
+                        <td>
+                            {% if schedule.most_recent_task %}
+                                <a href="{% url 'ui:task-detail' schedule.most_recent_task.id %}">{{ schedule.most_recent_task.created_at }}</a>
+                            {% else %}
+                                Not run yet
+                            {% endif %}
+                        </td>
+                        <td>{{ schedule.periodic_task.crontab }}</td>
+                        <td>{{ schedule.status }}</td>
+                        <td>
+                            <a href="{% url 'ui:update-schedule' schedule.id %}">
+                                <button class="button is-small has-text-link is-white singletonActive">
+                                    <span class="fa fa-pencil-alt"></span>
+                                </button>
+                            </a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
     {% include "partials/pagination_navbar.html" with page_obj=page_obj paginator=paginator %}
 {% endblock content %}
