--- a/functionary/ui/templates/core/function_list.html
+++ b/functionary/ui/templates/core/function_list.html
@@ -14,17 +14,13 @@
                             <div class="media-content">
                                 <a href="{% url 'ui:function-detail' function.id %}">
                                     <p class="title is-4">
-                                        {% if function.display_name %}
-                                            {{ function.display_name }} ({{ function.name }})
-                                        {% else %}
-                                            {{ function.name }}
-                                        {% endif %}
+                                        {{ function.render_name }}
                                     </p>
                                 </a>
                                 <p class="subtitle is-6">
                                     <a class="has-text-info"
                                        href="{% url 'ui:package-detail' function.package.id %}">
-                                        <span class="icon"><i class="fa fa-cubes"></i></span>&nbsp;{{ function.package.name|lower }}
+                                        <span class="icon"><i class="fa fa-cubes"></i></span>&nbsp;{{ function.package.render_name|lower }}
                                     </a>
                                 </p>
                                 {% if function.summary %}<p class="subtitle is-6">{{ function.summary }}</p>{% endif %}
