--- a/functionary/ui/templates/partials/task_element.html
+++ b/functionary/ui/templates/partials/task_element.html
@@ -11,7 +11,7 @@
                     <div class="media-content">
                     
                         <p class="title is-4">
-                            {{ task.function.name }}
+                            {{ task.function.render_name }}
                             &nbsp;&nbsp;
                         </p>
                     
