--- a/functionary/ui/templates/core/function_list.html
+++ b/functionary/ui/templates/core/function_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="table-container">
+    <div class="table-container mt-5">
         <table class="table is-striped is-hoverable is-fullwidth">
             <thead>
                 <tr>
