--- a/functionary/ui/templates/core/task_list.html
+++ b/functionary/ui/templates/core/task_list.html
@@ -1,11 +1,29 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-{% for task in page_obj %}
-    <div class="mb-2">
-        {% include 'partials/task_element.html' with task=task %}
+    <div class="table-container mt-5">
+        <table class="table is-striped is-hoverable is-fullwidth">
+            <thead>
+                <tr>
+                    <th>Function</th>
+                    <th>Status</th>
+                    <th>Creator</th>
+                    <th>Created at</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for task in page_obj %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'ui:task-detail' task.id %}">{{ task.function.name }}</a>
+                        </td>
+                        <td>{{ task.status }}</td>
+                        <td>{{ task.creator.username }}</td>
+                        <td>{{ task.created_at }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
-{% endfor %}
-
-{% include 'partials/pagination_navbar.html' with page_obj=page_obj paginator=paginator %}
-{% endblock %}
+    {% include "partials/pagination_navbar.html" with page_obj=page_obj paginator=paginator %}
+{% endblock content %}
