--- a/functionary/ui/templates/core/function_list.html
+++ b/functionary/ui/templates/core/function_list.html
@@ -1,34 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
-    <div>
-        {% for function in object_list %}
-            <div class="block">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-left">
-                                <span class="icon is-large">
-                                    <i class="fa fa-2x fa-cube"></i>
-                                </span>
-                            </div>
-                            <div class="media-content">
-                                <a href="{% url 'ui:function-detail' function.id %}">
-                                    <p class="title is-4">
-                                        {{ function.render_name }}
-                                    </p>
-                                </a>
-                                <p class="subtitle is-6">
-                                    <a class="has-text-info"
-                                       href="{% url 'ui:package-detail' function.package.id %}">
-                                        <span class="icon"><i class="fa fa-cubes"></i></span>&nbsp;{{ function.package.render_name|lower }}
-                                    </a>
-                                </p>
-                                {% if function.summary %}<p class="subtitle is-6">{{ function.summary }}</p>{% endif %}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
+    <div class="table-container mt-5">
+        <table class="table is-striped is-hoverable is-fullwidth">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Package</th>
+                    <th>Summary</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for function in page_obj %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'ui:function-detail' function.id %}">
+                                {% if function.display_name %}
+                                    {{ function.display_name }}
+                                {% else %}
+                                    {{ function.name }}
+                                {% endif %}
+                            </a>
+                        </td>
+                        <td>
+                            <a href="{% url 'ui:package-detail' function.package.id %}">{{ function.package.name }}</a>
+                        </td>
+                        <td>{{ function.summary }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
+    {% include "partials/pagination_navbar.html" with page_obj=page_obj paginator=paginator %}
 {% endblock content %}
