--- a/functionary/ui/templates/core/package_list.html
+++ b/functionary/ui/templates/core/package_list.html
@@ -1,30 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
-    <div>
-        {% for package in object_list %}
-            <div class="block">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-left">
-                                <span class="icon is-large">
-                                    <i class="fa fa-2x fa-cubes"></i>
-                                </span>
-                            </div>
-                            <div class="media-content">
-                                <a href="{% url 'ui:package-detail' package.id %}">
-                                    <p class="title is-4">{{ package.render_name }}</p>
-                                </a>
-                                {% if package.summary %}
-                                    <p class="subtitle is-6">{{ package.summary }}</p>
-                                {% elif package.description %}
-                                    <p class="subtitle is-6">{{ package.description }}</p>
-                                {% endif %}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
+    <div class="table-container mt-5">
+        <table class="table is-striped is-hoverable is-fullwidth">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Summary</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for package in page_obj %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'ui:package-detail' package.id %}">{{ package.render_name }}</a>
+                        </td>
+                        <td>{{ package.summary }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
+    {% include "partials/pagination_navbar.html" with page_obj=page_obj paginator=paginator %}
 {% endblock content %}
