#127 - Deactivate functions when removed from package.yaml (#176)

--- a/functionary/ui/templates/core/package_detail.html
+++ b/functionary/ui/templates/core/package_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    {% with package.functions.all as functions %}
+    {% with package.active_functions as functions %}
         <div class="column is-full">
             <nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
                 <ul>
