--- a/functionary/ui/templates/core/function_detail.html
+++ b/functionary/ui/templates/core/function_detail.html
@@ -26,6 +26,11 @@
                 </p>
             </h1>
         </div>
+        <div class="columns is-centered">
+            <div class="column has-text-centered">
+                {% if not function.active %}<div class="notification is-warning">This function is currently inactive</div>{% endif %}
+            </div>
+        </div>
         {% if function.description %}
             <div class="field ml-4">
                 <label class="label" for="desc">Description:</label>
@@ -49,36 +54,38 @@
         {% endif %}
         {% if form is not None %}
             <div class="field ml-4">
-                <label class="label">Create Task:</label>
-                <div class="ml-4">
-                    <form id="djangoForm"
-                          method="post"
-                          action="{% url 'ui:function-execute' %}">
-                        {% csrf_token %}
-                        <div class="has-background-white-ter">
-                            <input type="hidden" name="function_id" value="{{ function.id }}"/>
-                            <div class="column has-addons">
-                                {{ form.non_field_errors }}
-                                {{ form }}
-                                {% if missing_variables %}
-                                    <div class="field ml-4 missing-variables has-background-danger-light has-text-danger">
-                                        <span>Tasking this function may not work as expected; the following variables are missing:</span>
-                                        <ul>
-                                            {% for missing in missing_variables %}
-                                                <li>
-                                                    <span>{{ missing }}</span>
-                                                </li>
-                                            {% endfor %}
-                                        </ul>
-                                    </div>
-                                {% endif %}
+                {% if function.active %}
+                    <label class="label">Create Task:</label>
+                    <div class="ml-4">
+                        <form id="djangoForm"
+                              method="post"
+                              action="{% url 'ui:function-execute' %}">
+                            {% csrf_token %}
+                            <div class="has-background-white-ter">
+                                <input type="hidden" name="function_id" value="{{ function.id }}"/>
+                                <div class="column has-addons">
+                                    {{ form.non_field_errors }}
+                                    {{ form }}
+                                    {% if missing_variables %}
+                                        <div class="field ml-4 missing-variables has-background-danger-light has-text-danger">
+                                            <span>Tasking this function may not work as expected; the following variables are missing:</span>
+                                            <ul>
+                                                {% for missing in missing_variables %}
+                                                    <li>
+                                                        <span>{{ missing }}</span>
+                                                    </li>
+                                                {% endfor %}
+                                            </ul>
+                                        </div>
+                                    {% endif %}
+                                </div>
                             </div>
-                        </div>
-                        <input class="button mt-2 {% if missing_variables %}is-warning{% else %}is-link{% endif %}"
-                               type="submit"
-                               value="Execute"/>
-                    </form>
-                </div>
+                            <input class="button mt-2 {% if missing_variables %}is-warning{% else %}is-link{% endif %}"
+                                   type="submit"
+                                   value="Execute"/>
+                        </form>
+                    </div>
+                {% endif %}
             </div>
         {% endif %}
         <div class="pt-3 ml-4">
